z-index bug solved

--- a/client/src/components/kanban/Kanban.module.scss
+++ b/client/src/components/kanban/Kanban.module.scss
@@ -99,7 +99,6 @@
   display: flex;
   justify-content: space-between;
   position: relative;
-  z-index: 99999999999999999999;
 }
 
 .plusIcon{
